Fix to z-index bug on notification bar.

--- a/style/style.less
+++ b/style/style.less
@@ -188,7 +188,7 @@ a{
   padding:5px 15px 4px;
   font-size:12px;
   line-height:19px;
-  z-index:15;
+  z-index:21;
   cursor:default;
   display:none;
   position:fixed;
